--- a/hackdavis2024/public/index.html
+++ b/hackdavis2024/public/index.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-
-    <link rel="stylesheet" href="css/home.css">
-
+    <title>Volunteer Shifts</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-    <div class="container">
-        <button class="logout">log out</button>
-        <h1 class="greeting"></h1>
-    </div>
-
-    <script src="js/home.js"></script>
-    
+    <h1>Volunteer Shifts</h1>
+    <table id="shiftsTable">
+        <thead>
+            <tr>
+                <th>Shift Time</th>
+                <th>Date</th>
+                <th>Volunteers</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Data rows will go here -->
+        </tbody>
+    </table>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
