--- a/hackdavis2024/public/index.html
+++ b/hackdavis2024/public/index.html
@@ -20,6 +20,8 @@
             <!-- Data rows will go here -->
         </tbody>
     </table>
+    <script src="js/home.js"></script>
     <script src="js/scripts.js"></script>
+    
 </body>
 </html>
